--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,9 @@
             <version>1.0.2</version>
         </dependency>
         <dependency>
-            <groupId>com.microsoft.sqlserver</groupId>
-            <artifactId>mssql-jdbc</artifactId>
-            <version>7.2.2.jre11</version>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.16</version>
         </dependency>
         <dependency>
                 <groupId>org.springframework</groupId>
